--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -18,7 +18,7 @@
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="wrap_content"
             android:id="@+id/edtPhone"
-            android:hint="Email"
+            android:hint="Phone Number"
             android:layout_height="match_parent"
             android:textColorHint="@android:color/white"
             android:text="91111"
